fix width of modal items on mobile phones

--- a/src/components/ModalWindows/CategoryModal/CategoryModal.module.css
+++ b/src/components/ModalWindows/CategoryModal/CategoryModal.module.css
@@ -11,6 +11,9 @@
     font-size: 36px;
     line-height: 44px;
 }
+.modal__wrapper {
+    margin: 0 30px;
+}
 .closeBtn{
     margin-left: auto;
 }
@@ -26,9 +29,6 @@
     line-height: 29px;
 }
 
-.modalBody{
-    margin: 0 30px;
-}
 .inputWrapper{
     margin-top: 10px;
 }
@@ -61,4 +61,12 @@
     justify-content: center;
     font-size: 32px;
     color: var(--main-text);
+}
+
+@media only screen and (max-width: 768px) {
+    .modal__wrapper {
+        max-width: 510px;
+        margin: 0 auto;
+        padding: 0 15px;
+    }
 }
