--- a/src/components/ModalWindows/GroupModal/GroupModal.module.css
+++ b/src/components/ModalWindows/GroupModal/GroupModal.module.css
@@ -4,6 +4,9 @@
     overflow: visible;
     margin: 0px 30px;
 }
+.modal__wrapper{
+    margin: 0 30px;
+}
 .Header h3{
     margin-left: 30px;
     color: var(--main-text);
@@ -26,9 +29,6 @@
     line-height: 29px;
 }
 
-.modalBody{
-    margin: 0 30px;
-}
 .inputWrapper{
     margin-top: 10px;
 }
@@ -67,4 +67,12 @@
     justify-content: center;
     font-size: 32px;
     color: var(--main-text);
+}
+
+@media only screen and (max-width: 768px) {
+    .modal__wrapper{
+        max-width: 510px;
+        margin: 0 auto;
+        padding: 0 15px;
+    }
 }
